<resources>
    <string name="app_name">GuideMe</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="address">ADDRESS</string>
    <string name="search_or_select_place">Select or search place</string>
    <string name="hint">Search non-listed places</string>
    <string name="hotel">Hotel</string>
    <string name="photo">PHOTOS GALLERY</string>
    <string name="call">CALL</string>
    <string name="website">WEBSITE</string>
    <string name="reviews">REVIEWS</string>
    <string name="save">SAVE</string>
    <string name="food_court">Food Court</string>
    <string name="saved_places">Saved Places</string>
    <string name="tourist">Tourist Spots</string>
    <string name="shopping">Shopping</string>
    <string name="time">TIMEING</string>
    <string name="no_data">No Data to display</string>
    <string name="progress_msg">Please wait</string>
    <string-array name="nav_items">
        <item>Saved Places</item>
        <item>Saved Hotels</item>
        <item>Saved Restaurants</item>
    </string-array>
    <string-array name="places">
        <item>New Delhi, India</item>
        <item>Bangalore, Karnataka, India</item>
        <item>Rajkot,Gujarat, India</item>
        <item>Shimla ,Himachal Pradesh, India</item>
        <item>Chennai, Tamil Nadu, India</item>

        <item>Kochi,Kerla, India</item>
        <item>Jammu Kashmir, India</item>

        <item>Mumbai, Maharashtra, India</item>
        <item>Sydney, New South Wales, Australia</item>
    </string-array>
    <string-array name="place_id">
        <item>ChIJLbZ-NFv9DDkRzk0gTkm3wlI</item>
        <item>ChIJbU60yXAWrjsR4E9-UejD3_g</item>
        <item>ChIJlfcOXx8FWTkRLlJU7YfYG4Y</item>
        <item>ChIJ9wH5Z8NTBDkRJXdLVsUE_nw</item>
        <item>ChIJYTN9T-plUjoRM9RjaAunYW4</item>

        <item>ChIJwe1EZjDG5zsRaYxkjY_tpF0</item>
        <item>ChIJnaj_mSQJ4TgR8eeXRm16VgY</item>

        <item>ChIJQbc2YxC6vzsRkkDzYv-H-Oo</item>
        <item>ChIJP3Sa8ziYEmsRUKgyFmh9AQM</item>
    </string-array>

    <string name="google_key">AIzaSyBJuL43Wydk0TlX-E7Be2Lhcjsy3cxNeAY</string>
    <string name="title_activity_fullscreen">splashActvity</string>
    <string name="error_no_webpage">No web page avialable</string>
    <string name="error_phone_no_available">No Phone No Available</string>
    <string name="already_saved">Already Added</string>
    <string name="user_rating">User Rating Not Available</string>
    <string name="user_rating_not">User Rating</string>
    <string name="nav_place_des">Image of Place</string>
    <string name="nav_arrow_des">Navigation arrow</string>
    <string name="hotel_icon_des">Hotel Icon</string>
    <string name="review_icon_des">Review Icon</string>
    <string name="internet_error_msg">No Internet Connection.Please Connect</string>
    <string name="saved">SAVED</string>
    <string name="saved_place">Saved Places</string>
    <string name="saved_res">Saved Restaurant</string>
    <string name="saved_hotels">Saved Hotels</string>
    <string name="tourist_place">Tourist Places</string>
    <string name="restaurants">Restaurant</string>
    <string name="api_error">"Error contacting API: "</string>
</resources>
