<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tool_bar"
            android:layout_width="fill_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/Base.ThemeOverlay.AppCompat.Dark">

            <TextView
                android:id="@+id/skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/search_or_select_place"
                android:textColor="#fff"
                android:textSize="18sp" />

        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:text="@string/internet_error_msg"
                android:ellipsize="marquee"
                android:background="@android:color/holo_red_dark"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:visibility="gone"
                android:id="@+id/inter_msg"
                android:animateLayoutChanges="true"
                android:layout_height="wrap_content" />

            <AutoCompleteTextView
                android:id="@+id/enterplace"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_margin="18dp"
                android:background="@drawable/enter_place"
                android:drawableLeft="@drawable/ic_search_black"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_search_black"
                android:hint="@string/hint"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingRight="10dp"/>

        </LinearLayout>

        <ListView
            android:id="@+id/places"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

        </ListView>

    </LinearLayout>
</layout>
