<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.AppBarLayout
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/app_bar_height"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <android.support.design.widget.CollapsingToolbarLayout
                    android:id="@+id/collapsing_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:contentScrim="@color/colorPrimary"
                    app:expandedTitleMarginEnd="@dimen/app_margin_end"
                    app:expandedTitleMarginStart="@dimen/app_start_margin"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#a000">

                        <ImageView
                            android:id="@+id/imagePosterFull"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/colorPrimary"
                            android:contentDescription="@string/nav_place_des"
                            android:scaleType="centerCrop"
                            app:layout_collapseMode="parallax" />


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/place_name"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:padding="4dp"
                                android:textColor="#fff"
                                android:textSize="24sp" />

                            <TextView
                                android:id="@+id/place_vicinity"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:gravity="center"
                                android:padding="8dp"
                                android:textColor="#dbdbdb"
                                android:textSize="17sp" />

                            <TextView
                                android:id="@+id/user_rating_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"

                                android:text="@string/user_rating_not" />

                            <RatingBar
                                android:id="@+id/rating"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_margin="16dp"
                                android:layout_marginTop="10dp"
                                android:isIndicator="true"
                                android:numStars="5"
                                android:visibility="invisible" />

                        </LinearLayout>

                        <android.support.v7.widget.Toolbar
                            android:id="@+id/article_toolbar"
                            android:layout_width="match_parent"
                            android:layout_height="?attr/actionBarSize"
                            app:layout_collapseMode="pin"
                            app:navigationIcon="@drawable/ic_back" />

                    </FrameLayout>

                </android.support.design.widget.CollapsingToolbarLayout>

            </android.support.design.widget.AppBarLayout>

            <android.support.v4.widget.NestedScrollView
                android:id="@+id/scroll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/tools"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary"
                        android:elevation="4dp"
                        tools:targetApi="lollipop">

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:background="#9000"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:id="@+id/call"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:orientation="vertical"
                                android:paddingBottom="4dp"
                                android:paddingTop="4dp">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="0dp"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_marginBottom="5dp"
                                    android:layout_weight="1"
                                    android:contentDescription="@string/hotel_icon_des"
                                    android:padding="4dp"
                                    android:src="@drawable/ic_call"
                                    android:tint="@android:color/white"
                                    tools:ignore="NestedWeights" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:text="@string/call"
                                    android:textColor="@android:color/white"
                                    android:textSize="13sp" />

                            </LinearLayout>

                            <View
                                android:layout_width="0.4dp"
                                android:layout_height="fill_parent"
                                android:layout_marginBottom="10dp"
                                android:layout_marginTop="10dp"
                                android:background="#fff" />

                            <LinearLayout
                                android:id="@+id/website"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:orientation="vertical"
                                android:paddingBottom="4dp"
                                android:paddingTop="4dp">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="0dp"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_weight="1"
                                    android:padding="4dp"
                                    android:contentDescription="@string/hotel_icon_des"
                                    android:src="@drawable/ic_website"
                                    tools:ignore="NestedWeights" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:text="@string/website"
                                    android:textColor="#fff"
                                    android:textSize="13sp" />

                            </LinearLayout>

                            <View
                                android:layout_width="0.4dp"
                                android:layout_height="fill_parent"
                                android:layout_marginBottom="10dp"
                                android:layout_marginTop="10dp"
                                android:background="#fff" />

                            <LinearLayout
                                android:id="@+id/reviews"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:orientation="vertical"
                                android:paddingBottom="4dp"
                                android:paddingTop="4dp">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="0dp"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_weight="1"
                                    android:padding="4dp"
                                    android:src="@drawable/ic_review"
                                    android:contentDescription="@string/review_icon_des"
                                    android:tint="@android:color/white"
                                    tools:ignore="NestedWeights" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:text="@string/reviews"
                                    android:textColor="#fff"
                                    android:textSize="13sp" />

                            </LinearLayout>

                            <View
                                android:layout_width="0.4dp"
                                android:layout_height="fill_parent"
                                android:layout_marginBottom="10dp"
                                android:layout_marginTop="10dp"
                                android:background="#fff" />

                                <TextView
                                    android:id="@+id/saveText"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:text="@string/save"
                                    android:textColor="#fff"
                                    android:gravity="center"
                                    android:layout_weight="1"
                                    android:paddingBottom="4dp"
                                    android:paddingTop="4dp"
                                    android:drawableTop="@drawable/ic_save"
                                    android:textSize="13sp" />

                        </LinearLayout>

                    </RelativeLayout>

                    <include
                        android:id="@+id/address_include"
                        layout="@layout/address_layout" />

                    <include
                        android:id="@+id/photo_include"
                        layout="@layout/photos_layout" />

                    <include
                        android:id="@+id/timetable_include"
                        layout="@layout/timetable_layout" />

                </LinearLayout>

            </android.support.v4.widget.NestedScrollView>

        </android.support.design.widget.CoordinatorLayout>

    </FrameLayout>
</layout>